<resources>
    <string name="app_name" translatable="false">EthaziMisifu</string>
    <string name="registrar">REGISTRAR</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="mostrar_contrase_a">Mostrar contraseña</string>
    <string name="access_token" translatable="false" />
    <string name="user_location_permission_explanation" translatable="false" />
    <string name="user_location_permission_not_granted" translatable="false" />
    <string name="buscar">Buscar...</string>
    <string name="volver">Volver</string>
    <string name="ostatu_motak">Tipos de alojamiento</string>
    <string name="udalerriak">Municipio</string>
    <string name="probintzia">Provincia</string>

    <string-array name="Ostatuak">
        <item>Cualquiera</item>
        <item>Albergues</item>
        <item>Campings</item>
        <item>Casas rurales</item>
    </string-array>

    <string-array name="Provincias">
        <item>Cualquiera</item>
        <item>Bizkaia</item>
        <item>Araba/Álava</item>
        <item>Gipuzkoa</item>
    </string-array>
    <string name="nombre_y_apellidos">Nombre y apellidos</string>
    <string name="filtro_avanzado">Filtro avanzado</string>
    <string name="fecha">Fecha entrada</string>
    <string name="textview">TextView</string>
    <string name="fecha_salida">Fecha salida</string>
    <string name="hacer_reserva">Hacer reserva</string>
    <string name="ver_en_el_mapa">Ver en el mapa</string>
    <string name="ver_en_mapa">Ver en mapa</string>
    <string name="reserva">Reserva</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="abrir_lista">Abrir lista</string>
    <string name="abrir_mapa">Abrir mapa</string>
    <string name="cancelar">Cancelar</string>
    <string name="gratis">GRATIS</string>
    <string name="coste">Coste</string>

</resources>
