<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/espacio3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtOstatuak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ostatu_motak"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spMota"
        android:layout_width="171dp"
        android:layout_height="35dp"
        android:entries="@array/Ostatuak" />

    <TextView
        android:id="@+id/espacio"
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/txtProbintzia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/probintzia"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spProbintzia"
        android:layout_width="174dp"
        android:layout_height="37dp"
        android:entries="@array/Provincias" />

    <TextView
        android:id="@+id/espacio2"
        android:layout_width="match_parent"
        android:layout_height="33dp" />

    <TextView
        android:id="@+id/txtUdalerria"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/udalerriak"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spUdalerria"
        android:layout_width="174dp"
        android:layout_height="37dp" />
</LinearLayout>