<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerOstatu">

    <ScrollView
            android:id="@+id/scDescripcion"
            android:layout_width="390dp"
            android:layout_height="294dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="136dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="394dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtOstatuMota"
            android:layout_width="132dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="104dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtUbicacion"
            android:layout_width="172dp"
            android:layout_height="21dp"
            android:layout_marginStart="208dp"
            android:layout_marginTop="104dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTelefono"
        android:layout_width="162dp"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="448dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWeb"
        android:layout_width="163dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="484dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVerMapa"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="540dp"
        android:text="@string/ver_en_mapa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReserva"
        android:layout_width="102dp"
        android:layout_height="47dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="540dp"
        android:text="@string/reserva"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="102dp"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="540dp"
        android:text="@string/volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>